--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "clsx": "^2.0.0",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.18.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.23",
     "next-intl": "^3.26.5",
