--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "clsx": "^2.0.0",
+    "copy-to-clipboard": "^3.3.3",
     "date-fns": "^4.1.0",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
@@ -35,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-share": "^5.2.2",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
