--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^15.0.7",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^22.15.21",
     "@types/react": "^18.3.18",
     "@types/testing-library__jest-dom": "^5.14.9",
