--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^15.0.7",
     "@types/google.maps": "^3.58.1",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.15.21",
     "@types/react": "^18.3.18",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
