--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.4.0",
     "react-share": "^5.2.2",
     "tailwind-merge": "^2.6.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
