--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.9",
     "@hello-pangea/dnd": "^18.0.1",
     "@types/js-cookie": "^3.0.6",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.12.2",
     "clsx": "^2.0.0",
     "copy-to-clipboard": "^3.3.3",
