fixed --> new db and server actions

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^8.0.0",
+    "@googlemaps/js-api-loader": "^2.0.2",
     "@headlessui/react": "^2.2.9",
     "@hello-pangea/dnd": "^18.0.1",
     "@types/js-cookie": "^3.0.6",
