--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.438.0",
     "next": "^14.2.23",
     "next-intl": "^3.26.5",
+    "nodemailer": "^7.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
@@ -49,6 +50,7 @@
     "@types/google.maps": "^3.58.1",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.15.21",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18.3.18",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/uuid": "^10.0.0",
