--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-icons": "^5.4.0",
     "react-share": "^5.2.2",
     "tailwind-merge": "^2.6.0",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -59,8 +59,8 @@
     "next-router-mock": "^0.9.0",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.5.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.5.0",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5"
   }
